add other pages and futer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=2, minimum-scale=0.86">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Проект Арктика</title>
 	<link rel="stylesheet" type="text/css" href="styles2/MAINpage.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
@@ -45,5 +45,12 @@
 </div>
     </nav>  
  </header>
+ <div class="map-block">
+  <h2>Map</h2>
+  <div class="map-map"></div>
+ </div>
+ <footer>
+   <h3>Dmn</h3>
+ </footer>
 </body>
 </html>
