--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <p>КАРТА ПРИВЛЕКАТЕЛЬНОСТИ <br>АРКТИЧЕСКИХ РЕГИОНОВ РОССИИ</p>
     <div class="menu-sidebar">
         <ul class="side-menu">
-            <li><a href="../index.html">ГЛАВНАЯ</a></li>
-            <li><a href="pages/citylist.html">СПИСОК ГОРОДОВ</a></li>
-            <li><a href="pages/article.html">СТАТЬИ</a></li>
-            <li><a href="pages/news.html">НОВОСТИ</a></li>
-            <li><a href="pages/future.html">ПЕРСПЕКТИВЫ</a></li>
+          <li><a href="../pages/index.html">ГЛАВНАЯ</a></li>
+          <li><a href="../pages/citylist.html">СПИСОК ГОРОДОВ</a></li>
+          <li><a href="../pages/article.html">СТАТЬИ</a></li>
+          <li><a href="../pages/news.html">НОВОСТИ</a></li>
+          <li><a href="../pages/future.html">ПЕРСПЕКТИВЫ</a></li>
         </ul>           
     </div>
 </div>
