--- a/pages/future.html
+++ b/pages/future.html
@@ -35,15 +35,15 @@
   <p>КАРТА ПРИВЛЕКАТЕЛЬНОСТИ <br>АРКТИЧЕСКИХ РЕГИОНОВ РОССИИ</p>
     <div class="menu-sidebar">
         <ul class="side-menu">
-            <li><a href="../index.html">ГЛАВНАЯ</a></li>
-            <li><a href="pages/citylist.html">СПИСОК ГОРОДОВ</a></li>
-            <li><a href="pages/article.html">СТАТЬИ</a></li>
-            <li><a href="pages/news.html">НОВОСТИ</a></li>
-            <li><a href="pages/future.html">ПЕРСПЕКТИВЫ</a></li>
+            <li><a href="../pages/index.html">ГЛАВНАЯ</a></li>
+            <li><a href="../pages/citylist.html">СПИСОК ГОРОДОВ</a></li>
+            <li><a href="../pages/article.html">СТАТЬИ</a></li>
+            <li><a href="../pages/news.html">НОВОСТИ</a></li>
+            <li><a href="../pages/future.html">ПЕРСПЕКТИВЫ</a></li>
         </ul>           
     </div>
 </div>
-    </nav>  
+    </nav>
  </header>
  <div class="map-block">
   <h2>Map</h2>
