--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 </div>
     </nav>  
  </header>
+ <div class="slider">
  <div class="map-block">
   <h2>Map</h2>
   <div class="map-map"></div>
  </div>
+</div>
  <footer>
    <h3>Dmn</h3>
  </footer>
