--- a/index.html
+++ b/index.html
@@ -1,58 +1,98 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<title>Проект Арктика</title>
-	<link rel="stylesheet" type="text/css" href="styles2/MAINpage.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
-	<script src="scripts/myscript.js"></script>
-</head>
-<body>
- <header class="head"> 
-    <div class="logo"> 
-          <h1><a  id="top" href="../index.html">КАРТА ПРИВЛЕКАТЕЛЬНОСТИ <br>АРКТИЧЕСКИХ РЕГИОНОВ <br> РОССИИ</a></h1>
-          <img src="../styles2/bg.png" alt="logo" class="bg-image-top"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <title>Проект Арктика</title>
+    <link rel="stylesheet" type="text/css" href="styles2/MAINpage.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+    <script src="scripts/myscript.js"></script>
+  </head>
+  <body>
+    <header class="head">
+      <div class="logo">
+        <h1>
+          <a id="top" href="../index.html"
+            >КАРТА ПРИВЛЕКАТЕЛЬНОСТИ <br />АРКТИЧЕСКИХ РЕГИОНОВ <br />
+            РОССИИ</a
+          >
+        </h1>
+        <img src="../styles2/bg.png" alt="logo" class="bg-image-top" />
+      </div>
+      <nav>
+        <div class="topnav" id="myTopnav">
+          <a href="#about">Проект</a>
+          <a href="#contacts">КОНТАКТЫ</a>
+        </div>
+        <a href="#"
+          ><div class="learn-more">
+            <p>УЗНАТЬ БОЛЬШЕ</p>
+            <div class="rectangle"></div>
+          </div>
+        </a>
+        <div class="menu">
+          <span class="toggle-button">
+            <div class="menu-bar menu-bar-top"></div>
+            <div class="menu-bar menu-bar-middle"></div>
+            <div class="menu-bar menu-bar-bottom"></div>
+          </span>
+        </div>
+        <div class="menu-wrap">
+          <p>КАРТА ПРИВЛЕКАТЕЛЬНОСТИ <br />АРКТИЧЕСКИХ РЕГИОНОВ РОССИИ</p>
+          <div class="menu-sidebar">
+            <ul class="side-menu">
+              <li><a href="../pages/index.html">ГЛАВНАЯ</a></li>
+              <li><a href="../pages/citylist.html">СПИСОК ГОРОДОВ</a></li>
+              <li><a href="../pages/article.html">СТАТЬИ</a></li>
+              <li><a href="../pages/news.html">НОВОСТИ</a></li>
+              <li><a href="../pages/future.html">ПЕРСПЕКТИВЫ</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="slider">
+      <h2>Map</h2>
+      <div class="map-block">
+        <div class="s-wrap s-type-1" role="slider">
+          <input type="radio" id="s-1" name="slider-control" checked="checked">
+          <input type="radio" id="s-2" name="slider-control">
+          <input type="radio" id="s-3" name="slider-control">
+          <input type="radio" id="s-4" name="slider-control">
+          <input type="radio" id="s-5" name="slider-control">
+          <ul class="s-content">
+            <li class="s-item s-item-1" class="map_1"></li>
+            <li class="s-item s-item-2" class="map_2"></li>
+            <li class="s-item s-item-3" class="map_3"></li>
+            <li class="s-item s-item-4" class="map_4"></li>
+            <li class="s-item s-item-5" class="map_5"></li>
+          </ul>
+          <div class="s-control">
+            <label class="s-c-1" for="s-1"></label>
+            <label class="s-c-2" for="s-2"></label>
+            <label class="s-c-3" for="s-3"></label>
+            <label class="s-c-4" for="s-4"></label>
+            <label class="s-c-5" for="s-5"></label>
+          </div>
+          <div class="s-nav">
+            <label class="s-nav-1 right" for="s-2"></label>
+            <label class="s-nav-2 left" for="s-1"></label>
+            <label class="s-nav-2 right" for="s-3"></label>
+            <label class="s-nav-3 left" for="s-2"></label>
+            <label class="s-nav-3 right" for="s-4"></label>
+            <label class="s-nav-4 left" for="s-3"></label>
+            <label class="s-nav-4 right" for="s-5"></label>
+            <label class="s-nav-5 left" for="s-4"></label>
+          </div>
+        </div>
+        <div class="map-map"></div>
+      </div>
     </div>
-    <nav>
-      <div class="topnav" id="myTopnav">
-        <a href="#about">Проект</a>
-        <a href="#contacts">КОНТАКТЫ</a>
-      </div>
-      <a href="#"><div class="learn-more">
-      	<p>УЗНАТЬ БОЛЬШЕ</p>
-      	<div class="rectangle"></div>
-      </div>
-      </a>
-       <div class="menu">
-       	<span class="toggle-button">
-          <div class="menu-bar menu-bar-top"></div>
-          <div class="menu-bar menu-bar-middle"></div>
-          <div class="menu-bar menu-bar-bottom"></div>
-        </span>
-      </div>
-<div class="menu-wrap">
-  <p>КАРТА ПРИВЛЕКАТЕЛЬНОСТИ <br>АРКТИЧЕСКИХ РЕГИОНОВ РОССИИ</p>
-    <div class="menu-sidebar">
-        <ul class="side-menu">
-          <li><a href="../pages/index.html">ГЛАВНАЯ</a></li>
-          <li><a href="../pages/citylist.html">СПИСОК ГОРОДОВ</a></li>
-          <li><a href="../pages/article.html">СТАТЬИ</a></li>
-          <li><a href="../pages/news.html">НОВОСТИ</a></li>
-          <li><a href="../pages/future.html">ПЕРСПЕКТИВЫ</a></li>
-        </ul>           
-    </div>
-</div>
-    </nav>  
- </header>
- <div class="slider">
- <div class="map-block">
-  <h2>Map</h2>
-  <div class="map-map"></div>
- </div>
-</div>
- <footer>
-   <h3>Dmn</h3>
- </footer>
-</body>
+    <footer>
+      <h3>Dmn</h3>
+    </footer>
+  </body>
 </html>
